--- a/app/assets/stylesheets/Dashboard-add.css
+++ b/app/assets/stylesheets/Dashboard-add.css
@@ -14,7 +14,9 @@
     width:100%;
     height:40px;
     background-color:#5688a9;
-    box-shadow:0px -2px 2px #5FA9DA;
+    box-shadow:0 -1px 1px rgba(0, 0, 0, 0.35) inset;
+    -moz-box-shadow:0 -1px 1px rgba(0, 0, 0, 0.35) inset;
+    -webkit-box-shadow:0 -1px 1px rgba(0, 0, 0, 0.35) inset;
 }
 .dashboard-add-sub-menu ul{
     list-style-type: none;
@@ -52,36 +54,110 @@
 /********************************************************************************************************* 左边aside
 *******************************************************************************************************************/
 .content-right-nav[name='dashboard-add']{
-    background-color:#eff2f6;
-    width:260px;
+    width:200px;
     float:left;
-    height:auto;
     border-right:1px solid #dcdcdc;
-}
-/********************************************************************************************************* 右边的添加按钮
-*******************************************************************************************************************/
-.dash-add-condition{
-    padding-left:32px;
-    height:50px;
-    padding-top:21px;
-}
-.dash-add-condition>a{
-    display:block;
-    padding:8px 22px;
-    float:left;
-    margin:8px 15px 0 0;
-    position:relative;
-}
-.dash-add-condition>a>i{
-    margin-right:3px;
-    font-size:13px;
-    position:relative;
-    top:-1px;
-    left:0px;
+    box-shadow:1px 0 4px rgba(68,68,68, 0.2);
+    -webkit-box-shadow:1px 0 4px rgba(68,68,68, 0.2);
+    -moz-box-shadow:1px 0 4px rgba(68,68,68, 0.2);
 }
 
+.content-right-nav[name='dashboard-add']>section.solid>h3{
+    margin:15px 0 5px 10px;
+    font-size:15px;
+}
+.content-right-nav[name='dashboard-add']>section.solid>p{
+    font-size:11px;
+    font-weight:500;
+}
+.content-right-nav[name='dashboard-add']>section.solid>a{
+    margin-left:-62px;
+}
+/***************************************************** 左边aside
+***************************************************************/
+/*name*/
+.dashboard-add-name>input{
+    width:130px;
+    padding:5px 4px;
+    position:relative;
+    left:50%;
+    margin-left:-69px;
+    font-size:12px;
+}
+/*type*/
+.dashboard-add-type>ul{
+    list-style-type: none;
+    display:block;
+    padding-left:10px;
+    margin:0px 0 10px;
+}
+.dashboard-add-type>ul>li{
+    display:inline-block;
+    width:40px;
+    margin-right:2px;
+    height:40px;
+    background-image:url("../images/dashboard-add-type.png");
+    background-repeat:no-repeat;
+    border-radius:7px;
+    -moz-border-radius:7px;
+    -webkit-border-radius:7px;
+    cursor:pointer;
+    position:relative;
+    transition:opacity 0.25s ease-out;
+}
+.dashboard-add-type>ul>li.active{
+    opacity:1 !important;
+}
+.dashboard-add-type>ul>li:hover{
+    opacity:1 !important;
+}
+.dashboard-add-type>ul>li:nth-of-type(1){
+    background-position:center 0px;
+    opacity:0.4;
+}
+.dashboard-add-type>ul>li:nth-of-type(2){
+    background-position:center -47px;
+    opacity:0.4;
+}
+.dashboard-add-type>ul>li:nth-of-type(3){
+    background-position:center -95px;
+    opacity:0.4;
+}
+.dashboard-add-type>ul>li:nth-of-type(4){
+    background-position:center -144px;
+    opacity:0.4;
+}
+.dashboard-add-type>ul>li:after{
+    position:absolute;
+    font-size:11px;
+    color:rgba(0,0,0,0.9);
+    width:40px;
+    text-align:center;
+    bottom:-14px;
+}
+.dashboard-add-type>ul>li:nth-of-type(1):after{
+    content:"Line"
+}
+.dashboard-add-type>ul>li:nth-of-type(2):after{
+    content:"Column"
+}
+.dashboard-add-type>ul>li:nth-of-type(3):after{
+    content:"Pie"
+}
+.dashboard-add-type>ul>li:nth-of-type(4):after{
+    content:"Scatter"
+}
 /********************************************************************************************************* 右边的草稿图
 *******************************************************************************************************************/
+.content-left-main[name='dashboard-add']{
+    float:right;
+}
+.left-content-title[name='dashboard-add']{
+    height:70px;
+}
+
+
+
 .db-chart-body{
     position:absolute;
     top:102px;
