--- a/app/assets/stylesheets/Analytic-main.css
+++ b/app/assets/stylesheets/Analytic-main.css
@@ -59,7 +59,7 @@
 }
 
 .chosen-container-single .chosen-single {
-    background: none;
+    background:white;
 }
 
 div[title='analy-entity-select'] {
