--- a/app/assets/stylesheets/Dashboard-add.css
+++ b/app/assets/stylesheets/Dashboard-add.css
@@ -17,6 +17,8 @@
     box-shadow:0 -1px 1px rgba(0, 0, 0, 0.35) inset;
     -moz-box-shadow:0 -1px 1px rgba(0, 0, 0, 0.35) inset;
     -webkit-box-shadow:0 -1px 1px rgba(0, 0, 0, 0.35) inset;
+    z-index:10;
+    position:relative;
 }
 .dashboard-add-sub-menu ul{
     list-style-type: none;
@@ -147,85 +149,92 @@
 .dashboard-add-type>ul>li:nth-of-type(4):after{
     content:"Scatter"
 }
+/*内容*/
+.db-add-kpi-list{
+    padding:0px;
+    margin:0px 0 15px;
+    list-style-type:none;
+}
+.db-add-kpi-list>li span{
+    display:block;
+    height:15px;
+    width:15px;
+    margin-left:37px;
+    /*background-color:green;*/
+    position:relative;
+}
+.db-add-kpi-list>li{
+    padding:3px 0px;
+    position:relative;
+    cursor:default;
+}
+.db-add-kpi-list>li:hover i.icon-remove{
+    display:block;
+}
+.db-add-kpi-list>li p{
+    position:absolute;
+    left:56px;
+    top:2px;
+    margin:0px;
+    font-size:12px;
+    color:rgba(0,0,0,0.6);
+    max-width:100px;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+}
+.db-add-kpi-list>li i.icon-remove{
+    position:absolute;
+    right:22px;
+    font-size:11px;
+    top:4px;
+    pointer-events:auto;
+    color:rgba(0,0,0,0.4);
+    display:none;
+    cursor:pointer;
+}
+.db-add-kpi-list>li i.icon-remove:hover{
+    color:rgba(0,0,0,0.8);
+    display:block;
+}
 /********************************************************************************************************* 右边的草稿图
 *******************************************************************************************************************/
 .content-left-main[name='dashboard-add']{
-    float:right;
+    position:absolute;
+    left:205px;
+    right:0px;
+    bottom:0px;
+    top:110px;
 }
 .left-content-title[name='dashboard-add']{
-    height:70px;
+    height:103px;
+    position:absolute;
+    left:0px;
+    right:0px;
+    top:-80px;
+    transition:top 0.35s ease-out;
 }
-
-
-
+/*添加*/
+.analytics-condition-choose[name='dashboard-add']{
+    padding:12px 0 0 25px
+}
+.left-content-title[name='dashboard-add'] .analytic-control-condition-visible{
+    font-size:13px;
+}
+/*body*/
 .db-chart-body{
     position:absolute;
-    top:102px;
+    top:23px;
     bottom:10px;
-    left:31px;
+    left:10px;
     right:10px;
     border-top: 1px dotted #DDDDDD;
     overflow-x: hidden;
     padding: 0;
+    transition:top 0.35s ease-out;
     display:none;
 }
-.dash-add-condition>ul{
-    float:right;
-    padding:0;
-    margin:0;
-    list-style:none;
-    display:block;
-    padding-right:10px;
-    display:none;
-}
-.dash-add-condition>ul>li{
-    display:inline-block;
-    width:90px;
-    height:44px;
-    border:1px solid #ddd;
-    margin-left:-2px;
-    /*background-image:url("../images/db-chart-type.png");*/
-    background-image:url("/assets/db-chart-type.png");
-    background-repeat:no-repeat;
-    cursor:pointer;
-}
-.dash-add-condition>ul>li.line{
-    background-position:8px 6px;
-}
-.dash-add-condition>ul>li.column{
-    background-position:10px -44px;
-}
-.dash-add-condition>ul>li.pie{
-    background-position:9px -93px;
-}
-.dash-add-condition>ul>li.scatter{
-    background-position:9px -133px;
-}
-.dash-add-condition>ul>li.line:hover,.dash-add-condition>ul>li.line.active{
-    background-position:8px -173px;
-    border:1px solid #f5a133;
-}
-.dash-add-condition>ul>li.column:hover,.dash-add-condition>ul>li.column.active{
-    background-position:10px -223px;
-    border:1px solid #f5a133;
-}
-.dash-add-condition>ul>li.pie:hover,.dash-add-condition>ul>li.pie.active{
-    background-position:9px -272px;
-    border:1px solid #f5a133;
-}
-.dash-add-condition>ul>li.scatter:hover,.dash-add-condition>ul>li.scatter.active{
-    background-position:9px -312px;
-    border:1px solid #f5a133;
-}
-.dash-add-condition>input[type="text"]{
-    padding:6px 8px;
-    width:120px;
-    margin-top:13px;
-    margin-left:-5px;
-    border:1px solid #5FA9DA !important;
-    display:none;
-    font-family:"open-sans";
-}
+
 /***************************************************** 切换时间
 *****************************************************************/
 .db-chart-interval-alternate{
@@ -265,10 +274,76 @@
 }
 /***************************************************** 图形
 *****************************************************************/
-.db-chart-container{
+.put-db-chart{
     position:absolute;
     top:28px;
     bottom:10px;
     left:0px;
     right:0px;
+}
+
+/***************************** top
+*******************************/
+.chart-container-top{
+    position:absolute;
+    top:0px;
+    left:0px;
+    right:0px;
+    height:150px;
+}
+.chart-container-top>table{
+    width:100%;
+}
+.chart-container-top>table tr td:last-of-type{
+    width:150px;
+    font-size:40px;
+    padding-left:15px;
+}
+.chart-container-top>table tr:first-of-type td:last-of-type{
+    color:dodgerblue;
+}
+.chart-container-top>table tr:nth-of-type(2) td:last-of-type{
+    color:indianred;
+}
+/***************************** container
+*******************************/
+.db-chart-container{
+    position:absolute;
+    left:0px;
+    top:150px;
+    bottom:250px;
+    right:300px;
+}
+/***************************** right
+*******************************/
+.chart-container-right{
+    position:absolute;
+    right:0px;
+    top:150px;
+    bottom:100px;
+    width:300px;
+
+}
+.chart-container-right-top{
+    position:absolute;
+    width:300px;
+    height:100px;
+    right:0px;
+    top:200px;
+
+}
+.chart-container-right-bottom{
+    position:absolute;
+    width:300px;
+    right:0px;
+    bottom:100px;
+
+}
+.chart-container-bottom{
+    position:absolute;
+    bottom:0px;
+    left:0px;
+    height:250px;
+    right:0px;
+
 }
