--- a/app/assets/stylesheets/chosen.css
+++ b/app/assets/stylesheets/chosen.css
@@ -86,7 +86,7 @@
   background-position: -42px -10px;
 }
 .chosen-container-single .chosen-single div {
-  background:#eaedec;
+  background:white;
   border-left: 1px solid #AAAAAA;
   position: absolute;
   top: 0;
@@ -99,8 +99,8 @@
   display: block;
   width: 100%;
   height: 100%;
-  /*background: url('../images/Analytic-chosen-sprite.png') no-repeat 3px 5px;*/
-  background: url('/assets/Analytic-chosen-sprite.png') no-repeat 3px 5px;
+  background: url('../images/Analytic-chosen-sprite.png') no-repeat 3px 5px;
+  /*background: url('/assets/Analytic-chosen-sprite.png') no-repeat 3px 5px;*/
 }
 .chosen-container-single .chosen-search {
   position: relative;
