--- a/app/assets/stylesheets/Dashboard-add.css
+++ b/app/assets/stylesheets/Dashboard-add.css
@@ -290,6 +290,7 @@
     left:0px;
     right:0px;
     height:150px;
+    display:none;
 }
 .chart-container-top>table{
     width:100%;
@@ -310,9 +311,10 @@
 .db-chart-container{
     position:absolute;
     left:0px;
-    top:150px;
-    bottom:250px;
-    right:300px;
+    top:0px;
+    bottom:100px;
+    right:0px;
+
 }
 /***************************** right
 *******************************/
@@ -322,7 +324,7 @@
     top:150px;
     bottom:100px;
     width:300px;
-
+    display:none;
 }
 .chart-container-right-top{
     position:absolute;
@@ -339,11 +341,32 @@
     bottom:100px;
 
 }
+/***************************** bottom
+*******************************/
 .chart-container-bottom{
     position:absolute;
     bottom:0px;
     left:0px;
-    height:250px;
+    height:100px;
     right:0px;
-
+}
+.chart-container-bottom>table{
+    width:100%;
+}
+.chart-container-bottom>table td{
+    text-align:center;
+}
+.chart-container-bottom>table tr:first-of-type>td{
+    font-size:30px;
+    font-weight:lighter;
+    color:rgba(0,0,0,0.5);
+}
+.chart-container-bottom>table tr:first-of-type>td:first-of-type{
+    font-size:50px;
+    font-weight:bold;
+    color:#ff6060;
+}
+.chart-container-bottom>table tr:nth-of-type(2)>td{
+    font-size:14px;
+    color:rgba(0,0,0,0.3)
 }
