--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,47 +1,50 @@
 <aside class="content-right-nav" name='dashboard' id="content-right-nav">
-        <section class="adaptable">
-            <h3>DashBoard Group</h3>
-            <i class="icon-plus" id="content-right-nav-add-button"></i>
-            <ul id="content-right-nav-group">
-                <%@dashboards.each do |dashboard| %>
-                  <li class="sty-db-node" number=<%=dashboard.id%>  >
-                  <i class="icon-remove"  onclick="dashboard_delete(<%=dashboard.id%>)"></i>
-                  <a href="#" onclick="select_dashboard(<%=dashboard.id%>)"><%=dashboard.name%></a>
-                  </li>
-                <%end%> 
-            </ul>
-            <div class="content-right-nav-add-block" id="content-right-nav-add-block">
-                <p>give it a name</p>
+  <section class="adaptable">
+    <h3>DashBoard Group</h3>
+    <i class="icon-plus" id="content-right-nav-add-button"></i>
+    <ul id="content-right-nav-group">
+      <%@dashboards.each do |dashboard| %>
+          <li class="sty-db-node" number=<%=dashboard.id%>  >
+            <i class="icon-remove"  onclick="dashboard_delete(<%=dashboard.id%>)"></i>
+            <a href="#" onclick="select_dashboard(<%=dashboard.id%>)"><%=dashboard.name%></a>
+          </li>
+      <%end%>
+    </ul>
+    <div class="content-right-nav-add-block" id="content-right-nav-add-block">
+      <p>give it a name</p>
                 <input type='text' />
-            </div>
-        </section>
-        <section class="solid">
-            <h3>Add DashBoard</h3>
-            <p>Creating a dashboard of your favourite type,then put it
-            to one of the dashboard group item for long-term observation</p>
-            <a class="btn btn-primary">Add Now</a>
-        </section>
-        <section class="solid">
-            <h3>Full Size</h3>
-            <p>Resize the dashboard in the left to full screen so that you
-            can demonstrate it to your colleagues or leaders ,use Esc to
-            bring it back</p>
-            <a class="btn btn-primary">Full Now</a>
-        </section>
-    </aside>
-
-
-    <div class="content-left-main" name="dashboard" id="content-left-main">
-        <div class="left-content-title" id="left-content-title">
-              <p id="current-group-item" class="current-group-item"></p>
-              <i class="icon-edit current-group-item-edit" id="current-group-item-edit"></i>
-              <div class="content-right-nav-add-block" name="left-content" id="content-left-content-edit-block">
-                <p>edit the name</p>
-                <input type='text' />
-              </div>
-        </div>
     </div>
+  </section>
+  <section class="solid">
+    <h3>Add DashBoard</h3>
+            <p>Creating a dashboard of your favourite type,then put it
+              to one of the dashboard group item for long-term observation</p>
+    <a class="btn btn-primary">Add Now</a>
+  </section>
+  <section class="solid">
+            <h3><Fu></Fu>ll Size</h3>
+    <p><R></R>esize the dashboard in the left to full screen so that you
+      <ca></ca>n demonstrate it to your colleagues or leaders ,use Esc to
+      bring it back</p>
+          <a class="btn btn-primary">Full Now</a>
+  </section>
+</aside>
+<div class="content-left-main" name="dashboard" id="content-left-main">
+  <div class="left-content-title" id="left-content-title">
+    <p id="current-group-item" class="current-group-item"></p>
+    <i class="icon-edit current-group-item-edit" id="current-group-item-edit"></i>
+    <div class="content-right-nav-add-block" name="left-content" id="content-left-content-edit-block">
+      <p>edit the name</p>
+      <input type='text' />
+    </div>
+  </div>
+</div>
 
+<div class="dashboard-block gridster manage-btn-group">
+  <ul class="dashBoard-show" id="dashBoard-show">
+
+  </ul>
+</div>
 
 <script type="text/javascript">
     $(document).ready(function (){
