--- a/app/assets/stylesheets/2_column_right_nav.css
+++ b/app/assets/stylesheets/2_column_right_nav.css
@@ -3,12 +3,17 @@
 .content-right-nav{
     background-color:#eff2f6;
     width:260px;
-    float:right;
+    min-width:260px;
+    max-width:260px;
     height:100%;
     border-left:1px solid #dcdcdc;
-    margin-top:-110px;
-    display:table;
+    margin-top:-70px;
+    display:table-cell;
 }
+.content-right-nav[name="dashboard-add"]{
+    margin-top:-110px;
+}
+
 .content-right-nav>section{
     padding-bottom:12px;
 }
@@ -163,7 +168,7 @@
 /********************************************************************************************************* left-content-main
 *******************************************************************************************************************/
 .content-left-main{
-    float:left;
+
 }
 .left-content-title{
     height:49px;
@@ -172,6 +177,7 @@
 }
 .current-group-item{
     display:inline-block;
+    max-width:700px;
     text-overflow:ellipsis;
     overflow:hidden;
     white-space:nowrap;
