--- a/app/assets/stylesheets/Dashboard-add.css
+++ b/app/assets/stylesheets/Dashboard-add.css
@@ -57,7 +57,8 @@
 *******************************************************************************************************************/
 .content-right-nav[name='dashboard-add']{
     width:200px;
-    float:left;
+    min-width:200px;
+    max-width:200px;
     border-right:1px solid #dcdcdc;
     box-shadow:1px 0 4px rgba(68,68,68, 0.2);
     -webkit-box-shadow:1px 0 4px rgba(68,68,68, 0.2);
