--- a/app/assets/stylesheets/Dashboard-add.css
+++ b/app/assets/stylesheets/Dashboard-add.css
@@ -291,30 +291,36 @@
     left:0px;
     right:0px;
     height:150px;
-    display:none;
 }
 .chart-container-top>table{
     width:100%;
 }
+.chart-container-top>table tr td:first-of-type{
+
+    text-align:right;
+    font-size:15px;
+    color:rgba(0,0,0,0.7);
+}
 .chart-container-top>table tr td:last-of-type{
     width:150px;
     font-size:40px;
-    padding-left:15px;
+    padding-left:10px;
+    text-align:left;
 }
 .chart-container-top>table tr:first-of-type td:last-of-type{
-    color:dodgerblue;
+    color:cornflowerblue;
 }
 .chart-container-top>table tr:nth-of-type(2) td:last-of-type{
-    color:indianred;
+    color:lightpink;
 }
 /***************************** container
 *******************************/
 .db-chart-container{
     position:absolute;
     left:0px;
-    top:0px;
+    top:150px;
     bottom:100px;
-    right:0px;
+    right:300px;
 
 }
 /***************************** right
@@ -325,22 +331,33 @@
     top:150px;
     bottom:100px;
     width:300px;
-    display:none;
 }
-.chart-container-right-top{
-    position:absolute;
-    width:300px;
-    height:100px;
-    right:0px;
-    top:200px;
-
+.chart-container-right>p{
+    text-align:center;
 }
-.chart-container-right-bottom{
-    position:absolute;
-    width:300px;
-    right:0px;
-    bottom:100px;
-
+.chart-container-right>p:first-of-type{
+    margin-top:100px;
+   font-size:50px;
+   color:lightskyblue;
+}
+.chart-container-right>p:nth-of-type(2){
+   font-size:15px;
+   color:rgba(0,0,0,0.5)
+}
+.chart-container-right>table{
+    margin-top:50px;
+    width:100%;
+    padding-right:50px;
+}
+.chart-container-right>table tr td:last-of-type{
+    width:50px;
+    text-align:left;
+    max-width:50px;
+    min-width:50px;
+    padding-left:10px;
+}
+.chart-container-right>table tr td:first-of-type{
+    text-align:right
 }
 /***************************** bottom
 *******************************/
