--- a/app/assets/stylesheets/2_column_right_nav.css
+++ b/app/assets/stylesheets/2_column_right_nav.css
@@ -168,7 +168,7 @@
 /********************************************************************************************************* left-content-main
 *******************************************************************************************************************/
 .content-left-main{
-
+    height:100%;
 }
 .left-content-title{
     height:49px;
