--- a/app/assets/stylesheets/Dashboard.css
+++ b/app/assets/stylesheets/Dashboard.css
@@ -10,20 +10,20 @@
 .manage-btn-group>a{
     padding:8px 15px;
 }
-/********************************************************************************************************* dashboard item
+/********************************************************************************************************* main content
 *******************************************************************************************************************/
-.dashboard-block{
-    top:62px;
-    left:21px;
+.dashboard-content{
+    height:100%;
+    margin-top:-120px;
 }
 
-.db-add-show{
-    width:120px !important;
-}
+/********************************************************************************************************* dashboard item
+*******************************************************************************************************************/
 
 .dashBoard-show{
     list-style-type: none;
     padding-bottom:50px;
+    margin:0px;
 }
 .dashBoard-show>li{
     border:1px solid #ddd;
