--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -40,10 +40,12 @@
   </div>
 </div>
 
-<div class="dashboard-block gridster manage-btn-group">
-  <ul class="dashBoard-show" id="dashBoard-show">
+<div class="dashboard-content" >
+    <div class="gridster" >
+          <ul class="dashBoard-show" id="dashBoard-show">
 
-  </ul>
+          </ul>
+    </div>
 </div>
 
 <script type="text/javascript">
