--- a/app/assets/stylesheets/2_column_right_nav.css
+++ b/app/assets/stylesheets/2_column_right_nav.css
@@ -167,7 +167,7 @@
 }
 /********************************************************************************************************* left-content-main
 *******************************************************************************************************************/
-.content-left-main{
+.content-left-main[name="dashboard"]{
     height:100%;
 }
 .left-content-title{
