--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,4 +1,4 @@
- <div style="display:table;width:100%;table-layout:fixed;height:100%;margin-top:-71px;">
+ <div style="display:table;width:100%;table-layout:fixed;height:100%;margin-top:-71px;position:absolute">
         <div class="content-left-main" name="dashboard" id="content-left-main">
             <div style="width:auto;height:71px;"></div>
             <div class="left-content-title" id="left-content-title">
