--- a/app/views/dashboard_items/new.html.erb
+++ b/app/views/dashboard_items/new.html.erb
@@ -1,74 +1,164 @@
-<ul class="dashboard-add-left-menu">
-  <div class="dashboard-name clearfix" id="dashboard-name">
-    <p>Dashboard</p>
-    <i class="icon-pencil"></i>
-    <br />
-    <p>Name</p>
-  </div>
-  <input id="dashboard-name-edit" type="text" />
-  <div class="select-div">
-    <select data-placeholder="<%= t 'analytics.kpi_category'%> *" style="width:120px;" class="chosen-select"   title="analy-entity-select" id="chart-group">
-      <%@categories.each_with_index do |catetory,i|%>
-          <option value="<%= catetory.id%>"><%= catetory.name%></option>
-      <%end %>
-    </select>
-  </div>
-  <div class="select-div">
-    <select data-placeholder="<%= t 'analytics.kpi'%> *" style="width:120px;" class="chosen-select" title="analy-kpi-select" id="chart-kpi" date-pick=false>
-      <option value=""></option>
-    </select>
-  </div>
-  <div class="select-div">
-    <select data-placeholder="<%= t 'analytics.view'%> *" style="width:120px;" class="chosen-select" title="analy-view-select"  id="chart-view">
-      <%@entity_groups.each_with_index do |entity_group,i|%>
-          <option value="<%= entity_group.id%>" ><%= entity_group.name%></option>
-      <%end %>
-    </select>
-  </div>
-  <div class="time-select" id="time-select">
-    <input type="text" placeholder="Begin Time *" id="analy-begin-time" readonly=true />
-    <label class="index-date-extra-info"></label>
-    <input type="text" placeholder="End Time" id="analy-end-time" readonly=true />
-    <label class="index-date-extra-info"></label>
-  </div>
-  <div class="method-select">
-    <label class="analytics-radio-label">
-      <input type="radio" name="chartRadios" value="1" checked>
-      Total
-    </label>
-    <label class="analytics-radio-label">
-      <input type="radio" name="chartRadios" value="2">
-      Average
-    </label>
-  </div>
-  <a class="btn btn-primary" id="db-add-chart">add chart</a>
-</ul>
+<div class="dashboard-add-sub-menu" id="dashboard-add-sub-menu">
+  <ul>
+    <li>
+      <%= link_to raw("Back"),dashboards_path,class: "icon-arrow-left"%>
+    </li>
+    <li class="active">
+      <a>Custom Add</a>
+    </li>
+    <li>
+      <a>Template Add</a>
+    </li>
+  </ul>
+</div>
 
-<div class="manage-right-content" id="manage-right-content">
-  <div class="dash-add-condition">
-    <%= link_to raw("<i class=\"icon-arrow-left\">Back</i>"), dashboards_path,class: "btn"%>
-    <a class="btn btn-primary" style="display:none" id="add-dashboard"><i class="icon-plus"></i> Add DashBoard</a>
-    <ul id="db-chart-type-alternate">
-      <li class="line" type="line"></li>
-      <li class="column" type="column"></li>
-      <li class="pie" type="pie"></li>
-      <li class="scatter" type="scatter"></li>
-    </ul>
-  </div>
-
-  <div class="db-chart-body" id="db-chart-body" >
-    <div class="clearfix" id="db-chart-interval-alternate" my_height="28">
-      <ul class="pull-right db-control-chart-interval-group">
-        <li interval="90"><a>Hr</a></li>
-        <li interval="100"><a>D</a></li>
-        <li interval="200"><a>W</a></li>
-        <li interval="300"><a>M</a></li>
-        <li interval="400"><a>Qr</a></li>
-        <li interval="500"><a>Y</a></li>
+<div style="display:table;width:100%;table-layout:fixed;height:100%;margin-top:-111px;">
+  <aside class="content-right-nav" name='dashboard-add' id="content-right-nav">
+    <div style="height:111px;width:auto"></div>
+    <section class="solid dashboard-add-name">
+      <h3>Add DashBoard Name</h3>
+      <p>Give the dashboard being created a proper name</p>
+      <input type='text' placeholder="Dashboard name"/>
+    </section>
+    <section class="solid dashboard-add-type">
+      <h3>Choose A Type</h3>
+      <ul id="db-add-type">
+        <li class="active" type="line"></li>
+        <li type="column"></li>
+        <li type="pie"></li>
+        <li type="scatter"></li>
       </ul>
+    </section>
+    <section class="solid">
+      <h3>Create Content</h3>
+      <p>Add one or more series to form
+        your special dashboard</p>
+      <ul class="db-add-kpi-list" id="db-add-kpi-list">
+      </ul>
+      <a class="btn btn-primary" id="add-one-series">Add one series</a>
+    </section>
+    <section class="solid">
+      <h3>Select DashBoard Group</h3>
+      <p>Select a dashboard group to put your dashboard</p>
+      <select data-placehoder="Group" style="width:120px;" class="chosen-select">
+        <option ></option>
+        <%@dashboards.each do |dashboard| %>
+            <option value="<%= dashboard.id%>"><%= dashboard.name%></option>
+        <%end%>
+      </select>
+    </section>
+    <section class="solid">
+      <h3>Finish</h3>
+      <p>Publish your dashboard since you have done</p>
+      <a class="btn btn-primary">Publish Now</a>
+    </section>
+  </aside>
+
+  <div class="content-left-main" name="dashboard-add" id="content-left-main">
+    <div style="height:110px;width:auto"></div>
+    <div class="left-content-title" name="dashboard-add" id="left-content-title">
+      <div class="pull-left analytics-condition-choose" name="dashboard-add">
+        <div class="index-condition-group">
+          <select data-placeholder="<%= t 'analytics.kpi_category'%> *" style="width:120px;" class="chosen-select"   title="analy-entity-select" id="chart-group">
+            <%@categories.each_with_index do |catetory,i|%>
+                <option value="<%= catetory.id%>"><%= catetory.name%></option>
+            <%end %>
+          </select>
+
+          <select data-placeholder="<%= t 'analytics.kpi'%> *" style="width:120px;" class="chosen-select" title="analy-kpi-select" id="chart-kpi" date-pick=false>
+            <option value=""></option>
+          </select>
+
+          <select data-placeholder="<%= t 'analytics.view'%> *" style="width:120px;" class="chosen-select" title="analy-view-select"  id="chart-view">
+            <%@entity_groups.each_with_index do |entity_group,i|%>
+                <option value="<%= entity_group.id%>" ><%= entity_group.name%></option>
+            <%end %>
+          </select>
+        </div>
+        <div class="index-condition-group">
+          <input type="text" class="index-pick-date" placeholder="Begin Time *" id="analy-begin-time"
+                 readonly=true/>
+          <label class="index-date-extra-info"></label>
+          <input type="text" class="index-pick-date" placeholder="End Time" id="analy-end-time"
+                 readonly=true/>
+          <label class="index-date-extra-info"></label>
+        </div>
+        <div class="index-condition-group" style="width:120px">
+          <label class="analytics-radio-label">
+            <input type="radio" name="chartRadios" value="1" checked>
+            Total
+          </label>
+          <label class="analytics-radio-label">
+            <input type="radio" name="chartRadios" value="2">
+            Average
+          </label>
+        </div>
+        <a class="btn btn-primary btn-normal pull-left" style="margin-top:14px" id="db-add-chart">Add</a>
+      </div>
+      <i class="icon-chevron-down analytic-control-condition-visible" id="analytic-control-condition-visible" state="close"> </i>
     </div>
-    <div class="db-chart-container" id="chart-container">
+
+    <div class="db-chart-body" id="db-chart-body">
+      <div class="clearfix" id="db-chart-interval-alternate" my_height="28">
+        <ul class="pull-right db-control-chart-interval-group">
+          <li interval="90"><a>Hr</a></li>
+          <li interval="100"><a>D</a></li>
+          <li interval="200"><a>W</a></li>
+          <li interval="300"><a>M</a></li>
+          <li interval="400"><a>Qr</a></li>
+          <li interval="500"><a>Y</a></li>
+        </ul>
+      </div>
+      <div class="put-db-chart">
+        <div class="chart-container-top" id="chart-container-top">
+          <table>
+            <tr>
+              <td>$1000</td>
+              <td>Max</td>
+            </tr>
+            <tr>
+              <td>$10</td>
+              <td>Min</td>
+            </tr>
+          </table>
+        </div>
+        <div class="db-chart-container" id="chart-container"></div>
+        <div id="chart-container-right" class="chart-container-right">
+          <p>12%</p>
+          <p>monthly sales</p>
+          <table>
+            <tr>
+              <td>$123</td>
+              <td>Selected</td>
+            </tr>
+            <tr>
+              <td>$1234</td>
+              <td>Total</td>
+            </tr>
+          </table>
+        </div>
+        <div id="chart-container-right-scatter" class="chart-container-right">
+
+        </div>
+        <div class="chart-container-bottom" id="chart-container-bottom">
+          <table>
+            <tr>
+              <td>21</td>
+              <td>109</td>
+              <td>$34</td>
+              <td>$190</td>
+            </tr>
+            <tr>
+              <td>Out of Target</td>
+              <td>Total Amount</td>
+              <td>Average Value</td>
+              <td>Total Value</td>
+            </tr>
+          </table>
+        </div>
+      </div>
     </div>
+
   </div>
 </div>
 
