--- a/app/assets/stylesheets/chosen.css
+++ b/app/assets/stylesheets/chosen.css
@@ -99,8 +99,8 @@
   display: block;
   width: 100%;
   height: 100%;
-  background: url('../images/Analytic-chosen-sprite.png') no-repeat 3px 5px;
-  /*background: url('/assets/Analytic-chosen-sprite.png') no-repeat 3px 5px;*/
+  /*background: url('../images/Analytic-chosen-sprite.png') no-repeat 3px 5px;*/
+  background: url('/assets/Analytic-chosen-sprite.png') no-repeat 3px 5px;
 }
 .chosen-container-single .chosen-search {
   position: relative;
