--- a/app/assets/stylesheets/chosen.css
+++ b/app/assets/stylesheets/chosen.css
@@ -75,8 +75,8 @@
   display: block;
   width: 12px;
   height: 12px;
-  /*background: url('../images/Analytic-chosen-sprite.png') -42px 1px no-repeat;*/
-  background: url('/assets/Analytic-chosen-sprite.png') -42px 1px no-repeat;
+  background: url('../images/Analytic-chosen-sprite.png') -42px 1px no-repeat;
+  /*background: url('/assets/Analytic-chosen-sprite.png') -42px 1px no-repeat;*/
   font-size: 1px;
 }
 .chosen-container-single .chosen-single abbr:hover {
